css/styles.css
*, *::after, *::before {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    overflow-x: hidden;
}
body {
    background: #F7F7F7;
}
.main {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 25px;
    padding-block: 50px;
}
.main h1 {
    font-family: 'Roboto', sans-serif;
    font-weight: 300;
}
.message {
    display: none;
    justify-content: center;
    align-items: center;
    border-block: 2px solid #CE9E57;
    padding-block: 20px;
    margin-bottom: 50px;
}
.message h2 {
    font-family: 'Roboto', sans-serif;
    font-size: 50px;
    text-align: center;
    color: #333
}
.winner-text .champ {
    color: #CE9E57;
}
.winner-team {
    color: #333;
}
.round-title {
    text-align: center;
    margin-bottom: 40px;
    font-family: 'Roboto', sans-serif;
    font-weight: 300;
}
.bracket {
    display: grid;
    grid-template-columns: repeat(7, 1fr);
    grid-template-rows: 1fr;
    grid-column-gap: 0px;
    grid-row-gap: 0px;
    align-items: center;
}
.matchup {
    display: flex;
    flex-direction: column;
    margin-bottom: 20px;
    gap: 5px;
    align-items: center;
}
.square {
    width: 200px;
    height: 70px;
    border: 1px solid #999;
    border-radius: 10px;
}
.red  {
    width: 200px;
    height: 70px;
    border: 1px solid #999;
    border-radius: 10px;
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' width='200' height='70' preserveAspectRatio='none' viewBox='0 0 200 70'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1021%26quot%3b)' fill='none'%3e%3crect width='200' height='70' x='0' y='0' fill='rgba(157%2c 2%2c 8%2c 1)'%3e%3c/rect%3e%3cpath d='M5 70L75 0L133.5 0L63.5 70z' fill='url(%23SvgjsLinearGradient1022)'%3e%3c/path%3e%3cpath d='M50 70L120 0L162 0L92 70z' fill='url(%23SvgjsLinearGradient1022)'%3e%3c/path%3e%3cpath d='M91 70L161 0L191 0L121 70z' fill='url(%23SvgjsLinearGradient1022)'%3e%3c/path%3e%3cpath d='M193 70L123 0L102 0L172 70z' fill='url(%23SvgjsLinearGradient1023)'%3e%3c/path%3e%3cpath d='M154 70L84 0L72 0L142 70z' fill='url(%23SvgjsLinearGradient1023)'%3e%3c/path%3e%3cpath d='M110 70L40 0L-18.5 0L51.5 70z' fill='url(%23SvgjsLinearGradient1023)'%3e%3c/path%3e%3cpath d='M133.18887445789045 70L200 3.1888744578904493L200 70z' fill='url(%23SvgjsLinearGradient1022)'%3e%3c/path%3e%3cpath d='M0 70L66.81112554210955 70L 0 3.1888744578904493z' fill='url(%23SvgjsLinearGradient1023)'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1021'%3e%3crect width='200' height='70' fill='white'%3e%3c/rect%3e%3c/mask%3e%3clinearGradient x1='0%25' y1='100%25' x2='100%25' y2='0%25' id='SvgjsLinearGradient1022'%3e%3cstop stop-color='rgba(15%2c 72%2c 189%2c 0.2)' offset='0'%3e%3c/stop%3e%3cstop stop-opacity='0' stop-color='rgba(15%2c 72%2c 189%2c 0.2)' offset='0.66'%3e%3c/stop%3e%3c/linearGradient%3e%3clinearGradient x1='100%25' y1='100%25' x2='0%25' y2='0%25' id='SvgjsLinearGradient1023'%3e%3cstop stop-color='rgba(15%2c 72%2c 189%2c 0.2)' offset='0'%3e%3c/stop%3e%3cstop stop-opacity='0' stop-color='rgba(15%2c 72%2c 189%2c 0.2)' offset='0.66'%3e%3c/stop%3e%3c/linearGradient%3e%3c/defs%3e%3c/svg%3e");
}
.blue {
    width: 200px;
    height: 70px;
    border: 1px solid #999;
    border-radius: 10px;
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' width='200' height='70' preserveAspectRatio='none' viewBox='0 0 200 70'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1006%26quot%3b)' fill='none'%3e%3crect width='200' height='70' x='0' y='0' fill='rgba(0%2c 145%2c 255%2c 1)'%3e%3c/rect%3e%3cpath d='M5 70L75 0L133.5 0L63.5 70z' fill='url(%23SvgjsLinearGradient1007)'%3e%3c/path%3e%3cpath d='M50 70L120 0L162 0L92 70z' fill='url(%23SvgjsLinearGradient1007)'%3e%3c/path%3e%3cpath d='M91 70L161 0L191 0L121 70z' fill='url(%23SvgjsLinearGradient1007)'%3e%3c/path%3e%3cpath d='M193 70L123 0L102 0L172 70z' fill='url(%23SvgjsLinearGradient1008)'%3e%3c/path%3e%3cpath d='M154 70L84 0L72 0L142 70z' fill='url(%23SvgjsLinearGradient1008)'%3e%3c/path%3e%3cpath d='M110 70L40 0L-18.5 0L51.5 70z' fill='url(%23SvgjsLinearGradient1008)'%3e%3c/path%3e%3cpath d='M133.18887445789045 70L200 3.1888744578904493L200 70z' fill='url(%23SvgjsLinearGradient1007)'%3e%3c/path%3e%3cpath d='M0 70L66.81112554210955 70L 0 3.1888744578904493z' fill='url(%23SvgjsLinearGradient1008)'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1006'%3e%3crect width='200' height='70' fill='white'%3e%3c/rect%3e%3c/mask%3e%3clinearGradient x1='0%25' y1='100%25' x2='100%25' y2='0%25' id='SvgjsLinearGradient1007'%3e%3cstop stop-color='rgba(14%2c 69%2c 179%2c 0.2)' offset='0'%3e%3c/stop%3e%3cstop stop-opacity='0' stop-color='rgba(14%2c 69%2c 179%2c 0.2)' offset='0.66'%3e%3c/stop%3e%3c/linearGradient%3e%3clinearGradient x1='100%25' y1='100%25' x2='0%25' y2='0%25' id='SvgjsLinearGradient1008'%3e%3cstop stop-color='rgba(14%2c 69%2c 179%2c 0.2)' offset='0'%3e%3c/stop%3e%3cstop stop-opacity='0' stop-color='rgba(14%2c 69%2c 179%2c 0.2)' offset='0.66'%3e%3c/stop%3e%3c/linearGradient%3e%3c/defs%3e%3c/svg%3e");
}
.square-f {
    width: 250px;
    height: 70px;
    border: 1px solid #999;
    border-radius: 10px;
}
.red-f {
    width: 250px;
    height: 70px;
    border: 1px solid #999;
    border-radius: 10px;
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' width='200' height='70' preserveAspectRatio='none' viewBox='0 0 200 70'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1021%26quot%3b)' fill='none'%3e%3crect width='200' height='70' x='0' y='0' fill='rgba(157%2c 2%2c 8%2c 1)'%3e%3c/rect%3e%3cpath d='M5 70L75 0L133.5 0L63.5 70z' fill='url(%23SvgjsLinearGradient1022)'%3e%3c/path%3e%3cpath d='M50 70L120 0L162 0L92 70z' fill='url(%23SvgjsLinearGradient1022)'%3e%3c/path%3e%3cpath d='M91 70L161 0L191 0L121 70z' fill='url(%23SvgjsLinearGradient1022)'%3e%3c/path%3e%3cpath d='M193 70L123 0L102 0L172 70z' fill='url(%23SvgjsLinearGradient1023)'%3e%3c/path%3e%3cpath d='M154 70L84 0L72 0L142 70z' fill='url(%23SvgjsLinearGradient1023)'%3e%3c/path%3e%3cpath d='M110 70L40 0L-18.5 0L51.5 70z' fill='url(%23SvgjsLinearGradient1023)'%3e%3c/path%3e%3cpath d='M133.18887445789045 70L200 3.1888744578904493L200 70z' fill='url(%23SvgjsLinearGradient1022)'%3e%3c/path%3e%3cpath d='M0 70L66.81112554210955 70L 0 3.1888744578904493z' fill='url(%23SvgjsLinearGradient1023)'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1021'%3e%3crect width='200' height='70' fill='white'%3e%3c/rect%3e%3c/mask%3e%3clinearGradient x1='0%25' y1='100%25' x2='100%25' y2='0%25' id='SvgjsLinearGradient1022'%3e%3cstop stop-color='rgba(15%2c 72%2c 189%2c 0.2)' offset='0'%3e%3c/stop%3e%3cstop stop-opacity='0' stop-color='rgba(15%2c 72%2c 189%2c 0.2)' offset='0.66'%3e%3c/stop%3e%3c/linearGradient%3e%3clinearGradient x1='100%25' y1='100%25' x2='0%25' y2='0%25' id='SvgjsLinearGradient1023'%3e%3cstop stop-color='rgba(15%2c 72%2c 189%2c 0.2)' offset='0'%3e%3c/stop%3e%3cstop stop-opacity='0' stop-color='rgba(15%2c 72%2c 189%2c 0.2)' offset='0.66'%3e%3c/stop%3e%3c/linearGradient%3e%3c/defs%3e%3c/svg%3e");
}
.blue-f {
    width: 250px;
    height: 70px;
    border: 1px solid #999;
    border-radius: 10px;
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' width='200' height='70' preserveAspectRatio='none' viewBox='0 0 200 70'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1006%26quot%3b)' fill='none'%3e%3crect width='200' height='70' x='0' y='0' fill='rgba(0%2c 145%2c 255%2c 1)'%3e%3c/rect%3e%3cpath d='M5 70L75 0L133.5 0L63.5 70z' fill='url(%23SvgjsLinearGradient1007)'%3e%3c/path%3e%3cpath d='M50 70L120 0L162 0L92 70z' fill='url(%23SvgjsLinearGradient1007)'%3e%3c/path%3e%3cpath d='M91 70L161 0L191 0L121 70z' fill='url(%23SvgjsLinearGradient1007)'%3e%3c/path%3e%3cpath d='M193 70L123 0L102 0L172 70z' fill='url(%23SvgjsLinearGradient1008)'%3e%3c/path%3e%3cpath d='M154 70L84 0L72 0L142 70z' fill='url(%23SvgjsLinearGradient1008)'%3e%3c/path%3e%3cpath d='M110 70L40 0L-18.5 0L51.5 70z' fill='url(%23SvgjsLinearGradient1008)'%3e%3c/path%3e%3cpath d='M133.18887445789045 70L200 3.1888744578904493L200 70z' fill='url(%23SvgjsLinearGradient1007)'%3e%3c/path%3e%3cpath d='M0 70L66.81112554210955 70L 0 3.1888744578904493z' fill='url(%23SvgjsLinearGradient1008)'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1006'%3e%3crect width='200' height='70' fill='white'%3e%3c/rect%3e%3c/mask%3e%3clinearGradient x1='0%25' y1='100%25' x2='100%25' y2='0%25' id='SvgjsLinearGradient1007'%3e%3cstop stop-color='rgba(14%2c 69%2c 179%2c 0.2)' offset='0'%3e%3c/stop%3e%3cstop stop-opacity='0' stop-color='rgba(14%2c 69%2c 179%2c 0.2)' offset='0.66'%3e%3c/stop%3e%3c/linearGradient%3e%3clinearGradient x1='100%25' y1='100%25' x2='0%25' y2='0%25' id='SvgjsLinearGradient1008'%3e%3cstop stop-color='rgba(14%2c 69%2c 179%2c 0.2)' offset='0'%3e%3c/stop%3e%3cstop stop-opacity='0' stop-color='rgba(14%2c 69%2c 179%2c 0.2)' offset='0.66'%3e%3c/stop%3e%3c/linearGradient%3e%3c/defs%3e%3c/svg%3e");
}
.reset {
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
    bottom: 200px;
}
.reset-btn {
    color: #777;
    list-style: none;
    text-decoration: none;
    text-align: center;
    font-family: 'Roboto', sans-serif;
    font-size: 25px;
    border: 1px solid #999;
    border-radius: 10px;
    padding-block: 10px;
    padding-inline: 40px ;
}
.flex {
    display: flex;
}

